added accordian menus for testing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>University of Waterloo - Mathematics Course Notes</title>
         <link rel = "stylesheet" href = style.css>
         <link rel = "icon" href = "./resources/img/logo.jpg">
+        <script src = "script.js" defer></script>
     </head>
     <body>
         <div class = "header">
@@ -14,7 +15,49 @@
             </h1>
         </div>
         <div class = "content">
-
+            <button class = "accordian">
+                Linear Algebra
+            </button>
+            <div class = "panel">
+                <p>
+                    This is the section for Linear Algebra!
+                </p>
+                <button class = "accordian nested">
+                    Math 115
+                </button>
+                <div class = "panel">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                         Eaque nihil sunt provident amet! 
+                         Maxime ducimus doloribus nobis voluptatibus,
+                         cumque amet itaque dolore nemo sint obcaecati
+                         sequi reiciendis sapiente magnam quidem?
+                    </p>
+                </div>
+            </div>
+            <button class = "accordian">
+                Calculus
+            </button>
+            <div class = "panel">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Cumque repudiandae eius provident deserunt delectus 
+                    consequatur consectetur repellat quibusdam, 
+                    tempora itaque adipisci praesentium mollitia, 
+                    tenetur odio odit? Tenetur in veritatis fuga!
+                </p>
+            </div>
+            <button class = "accordian">
+                Computer Science
+            </button>
+            <div class = "panel">
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    Corrupti suscipit aliquam alias quaerat et ex adipisci quas, 
+                    illum quos perspiciatis qui dicta dolorem! 
+                    Eos nam reprehenderit aspernatur dolor, adipisci pariatur.
+                </p>
+            </div>
         </div>
         <div class = "footer">
 
