fixed issue with nested accordians

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             </h1>
         </div>
         <div class = "content">
-            <button class = "accordian">
+            <button class = "accordian outer">
                 Linear Algebra
             </button>
             <div class = "panel">
                 <p>
                     This is the section for Linear Algebra!
                 </p>
-                <button class = "accordian nested">
+                <button class = "nested accordian">
                     Math 115
                 </button>
                 <div class = "panel">
