added test file to math 115 link

--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
                 </button>
                 <div class = "panel">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                         Eaque nihil sunt provident amet! 
-                         Maxime ducimus doloribus nobis voluptatibus,
-                         cumque amet itaque dolore nemo sint obcaecati
-                         sequi reiciendis sapiente magnam quidem?
+                        Math 115 Course Notes
                     </p>
+                    <a href = "./resources/docs/MATH115F21CourseSyllabus.pdf">Course Syllabus</a>
                 </div>
             </div>
             <button class = "accordian">
