added another submenu under calculus for testing

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     This is the section for Linear Algebra!
                 </p>
                 <button class = "nested accordian">
-                    Math 115
+                    Math 115 - Linear Algebra for Engineering
                 </button>
                 <div class = "panel">
                     <p>
@@ -37,12 +37,17 @@
             </button>
             <div class = "panel">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Cumque repudiandae eius provident deserunt delectus 
-                    consequatur consectetur repellat quibusdam, 
-                    tempora itaque adipisci praesentium mollitia, 
-                    tenetur odio odit? Tenetur in veritatis fuga!
+                    This is the section for calculus!
                 </p>
+                <button class = "nested accordian">
+                    Calculus I
+                </button>
+                <div class = "panel">
+                    <p>
+                        Filler text
+                    </p>
+                    <a href = "">Test link</a>
+                </div>
             </div>
             <button class = "accordian">
                 Computer Science
