replaced vanilla CSS with SASS, edited HTMl structure

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <head>
         <meta charset = "utf-8">
         <title>University of Waterloo - Mathematics Course Notes</title>
-        <link rel = "stylesheet" href = style.css>
+        <link rel = "stylesheet" href = styles/style.css>
         <link rel = "icon" href = "./resources/img/logo.jpg">
         <script src = "script.js" defer></script>
     </head>
     <body>
-        <div class = "header">
+        <header class = "header">
             <h1>
                 University of Waterloo | Faculty of Mathematics
             </h1>
-        </div>
-        <div class = "content">
+        </header>
+        <section class = "content">
             <button class = "accordian outer">
                 Linear Algebra
             </button>
@@ -22,14 +22,53 @@
                 <p>
                     This is the section for Linear Algebra!
                 </p>
-                <button class = "nested accordian">
-                    Math 115 - Linear Algebra for Engineering
-                </button>
-                <div class = "panel">
-                    <p>
-                        Math 115 Course Notes
-                    </p>
-                    <a href = "./resources/docs/MATH115F21CourseSyllabus.pdf">Course Syllabus</a>
+                <div class = "subsection">
+                    <div class = "acontainer">
+                        <button class = "nested accordian">
+                            Math 115 - Linear Algebra for Engineering
+                        </button>
+                        <div class = "panel">
+                            <p>
+                                Math 115 Course Notes
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                Corrupti suscipit aliquam alias quaerat et ex adipisci quas, 
+                                illum quos perspiciatis qui dicta dolorem! 
+                                Eos nam reprehenderit aspernatur dolor, adipisci pariatur.
+                            </p>
+                            <a href = "./resources/docs/MATH115F21CourseSyllabus.pdf">Course Syllabus</a>
+                        </div>
+                    </div>
+                    <div class = "acontainer">
+                        <button class = "nested accordian">
+                            Math 115 - Linear Algebra for Engineering
+                        </button>
+                        <div class = "panel">
+                            <p>
+                                Math 115 Course Notes
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                Corrupti suscipit aliquam alias quaerat et ex adipisci quas, 
+                                illum quos perspiciatis qui dicta dolorem! 
+                                Eos nam reprehenderit aspernatur dolor, adipisci pariatur.
+                            </p>
+                            <a href = "./resources/docs/MATH115F21CourseSyllabus.pdf">Course Syllabus</a>
+                        </div>
+                    </div>
+                    <div class = "acontainer">
+                        <button class = "nested accordian">
+                            Math 115 - Linear Algebra for Engineering
+                        </button>
+                        <div class = "panel">
+                            <p>
+                                Math 115 Course Notes
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                Corrupti suscipit aliquam alias quaerat et ex adipisci quas, 
+                                illum quos perspiciatis qui dicta dolorem! 
+                                Eos nam reprehenderit aspernatur dolor, adipisci pariatur.
+                            </p>
+                            <a href = "./resources/docs/MATH115F21CourseSyllabus.pdf">Course Syllabus</a>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
             <button class = "accordian">
@@ -39,15 +78,6 @@
                 <p>
                     This is the section for calculus!
                 </p>
-                <button class = "nested accordian">
-                    Calculus I
-                </button>
-                <div class = "panel">
-                    <p>
-                        Filler text
-                    </p>
-                    <a href = "">Test link</a>
-                </div>
             </div>
             <button class = "accordian">
                 Computer Science
@@ -60,9 +90,9 @@
                     Eos nam reprehenderit aspernatur dolor, adipisci pariatur.
                 </p>
             </div>
-        </div>
-        <div class = "footer">
+        </section>
+        <section class = "footer">
 
-        </div>
+        </section>
     </body>
 </html>
