added background colour to sub accordian folders

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <button class = "nested accordian">
                             Math 115 - Linear Algebra for Engineering
                         </button>
-                        <div class = "panel">
+                        <div class = "panel inside">
                             <p>
                                 Math 115 Course Notes
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
@@ -42,7 +42,7 @@
                         <button class = "nested accordian">
                             Math 115 - Linear Algebra for Engineering
                         </button>
-                        <div class = "panel">
+                        <div class = "panel inside">
                             <p>
                                 Math 115 Course Notes
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
@@ -57,7 +57,7 @@
                         <button class = "nested accordian">
                             Math 115 - Linear Algebra for Engineering
                         </button>
-                        <div class = "panel">
+                        <div class = "panel inside">
                             <p>
                                 Math 115 Course Notes
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
@@ -74,7 +74,7 @@
             <button class = "accordian">
                 Calculus
             </button>
-            <div class = "panel">
+            <div class = "panel inside">
                 <p>
                     This is the section for calculus!
                 </p>
@@ -82,7 +82,7 @@
             <button class = "accordian">
                 Computer Science
             </button>
-            <div class = "panel">
+            <div class = "panel inside">
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Corrupti suscipit aliquam alias quaerat et ex adipisci quas, 
